...
    <string name="upload_photo">upload photo</string>

    <!-- Content Description-->
    <string name="desciprion_cover">Cover</string>

    <!-- Dialog options -->
    <string name="delete_option">Delete</string>

    <!-- Hints -->
    <string name="hint_book_title">Title</string>
    <string name="hint_book_isbn">Isbn</string>
    <string name="hint_book_date">Publication date</string>
    <string name="search_query_hint">Enter book title or ISBN</string>
    <string name="search">Search</string>

    <!-- Main Activity -->
    <string name="main_settings_icon">Settings</string>
    <string name="main_add_new_book_option">Add new book</string>
    <string name="main_delete_all_books">Delete all books</string>
    <string name="main_error_updating_books">Could not load list of books</string>
    <string name="main_error_deleting_books">Could not delete your books, please try again later</string>
    <string name="main_alert_dialog_delete_all_title">Delete all books?</string>
    <string name="main_alert_dialog_delete_all_message">This will permanently discard all your books! Are you absolutely sure?</string>
    <string name="main_alert_dialog_accept">Yes</string>
    <string name="main_alert_dialog_cancel">Cancel</string>
...
