<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemSaveBook"
        android:title="@string/save_book_icon"
        android:icon="@drawable/ic_check"
        app:showAsAction="always"
        />
</menu>