...
            android:paddingBottom="24dp"
            android:scrollbars="vertical" />

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddBookManually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimary"
...
