<?xml version="1.0" encoding="utf-8"?>
<resources>
    <array name="book_dialog_options">
        <item>@string/delete_option</item>
    </array>
</resources>